[gd_scene load_steps=7 format=4 uid="uid://cgs3nykuxjd54"]

[ext_resource type="Script" path="res://levels/std/std.gd" id="1_4w7ui"]
[ext_resource type="TileSet" uid="uid://bmdyj28ichv7b" path="res://assets/tilesets/vectorTDTileSet.tres" id="2_2sx05"]
[ext_resource type="PackedScene" uid="uid://cawdmj8me57o0" path="res://scenes/strobe_square/strobe_square.tscn" id="3_6nm7h"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_n6u17"]
size = Vector2(1150, 850)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_0gmvk"]
size = Vector2(50, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yyeby"]
size = Vector2(50, 25)

[node name="Map" type="Node2D"]
script = ExtResource("1_4w7ui")

[node name="MapArea" type="Sprite2D" parent="."]
position = Vector2(525, 375)
texture = SubResource("PlaceholderTexture2D_n6u17")
metadata/_edit_lock_ = true

[node name="GroundTileMapLayer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAD/////BAAAAAAAAAD//wAABAAAAAAAAAD//wEABAAAAAAAAAD//wIABAAAAAAAAAD//wMABAAAAAAAAAD//wQABAAAAAAAAAD//wUABAAAAAAAAAD//wYABAAAAAAAAAD//wcABAAAAAAAAAD//wgABAAAAAAAAAD//wkABAAAAAAAAAD//woABAAAAAAAAAD//wsABAAAAAAAAAD//wwABAAAAAAAAAD//w0ABAAAAAAAAAD//w4ABAAAAAAAAAD//w8ABAAAAAAAAAAAAP//BAAAAAAAAAAAAAAABAAAAAAAAAAAAAEABAAAAAAAAAAAAAIABAAAAAAAAAAAAAMABAAAAAAAAAAAAAQABAAAAAAAAAAAAAUABAAAAAAAAAAAAAYABAAAAAAAAAAAAAcABAAAAAAAAAAAAAgABAAAAAAAAAAAAAkABAAAAAAAAAAAAAoABAAAAAAAAAAAAAsABAAAAAAAAAAAAAwABAAAAAAAAAAAAA0ABAAAAAAAAAAAAA4ABAAAAAAAAAAAAA8ABAAAAAAAAAABAP//BAAAAAAAAAABAAAABAAAAAAAAAABAAEABAAAAAAAAAABAAIABAAAAAAAAAABAAMABAAAAAAAAAABAAQABAAAAAAAAAABAAUABAAAAAAAAAABAAYABAAAAAAAAAABAAcABAAAAAAAAAABAAgABAAAAAAAAAABAAkABAAAAAAAAAABAAoABAAAAAAAAAABAAsABAAAAAAAAAABAAwABAAAAAAAAAABAA0ABAAAAAAAAAABAA4ABAAAAAAAAAABAA8ABAAAAAAAAAACAP//BAAAAAAAAAACAAAABAAAAAAAAAACAAEABAAAAAAAAAACAAIABAAAAAAAAAACAAMABAAAAAAAAAACAAQABAAAAAAAAAACAAUABAAAAAAAAAACAAYABAAAAAAAAAACAAcABAAAAAAAAAACAAgABAAAAAAAAAACAAkABAAAAAAAAAACAAoABAAAAAAAAAACAAsABAAAAAAAAAACAAwABAAAAAAAAAACAA0ABAAAAAAAAAACAA4ABAAAAAAAAAACAA8ABAAAAAAAAAADAP//BAAAAAAAAAADAAAABAAAAAAAAAADAAEABAAAAAAAAAADAAIABAAAAAAAAAADAAMABAAAAAAAAAADAAQABAAAAAAAAAADAAUABAAAAAAAAAADAAYABAAAAAAAAAADAAcABAAAAAAAAAADAAgABAAAAAAAAAADAAkABAAAAAAAAAADAAoABAAAAAAAAAADAAsABAAAAAAAAAADAAwABAAAAAAAAAADAA0ABAAAAAAAAAADAA4ABAAAAAAAAAADAA8ABAAAAAAAAAAEAP//BAAAAAAAAAAEAAAABAAAAAAAAAAEAAEABAAAAAAAAAAEAAIABAAAAAAAAAAEAAMABAAAAAAAAAAEAAQABAAAAAAAAAAEAAUABAAAAAAAAAAEAAYABAAAAAAAAAAEAAcABAAAAAAAAAAEAAgABAAAAAAAAAAEAAkABAAAAAAAAAAEAAoABAAAAAAAAAAEAAsABAAAAAAAAAAEAAwABAAAAAAAAAAEAA0ABAAAAAAAAAAEAA4ABAAAAAAAAAAEAA8ABAAAAAAAAAAFAP//BAAAAAAAAAAFAAAABAAAAAAAAAAFAAEABAAAAAAAAAAFAAIABAAAAAAAAAAFAAMABAAAAAAAAAAFAAQABAAAAAAAAAAFAAUABAAAAAAAAAAFAAYABAAAAAAAAAAFAAcABAAAAAAAAAAFAAgABAAAAAAAAAAFAAkABAAAAAAAAAAFAAoABAAAAAAAAAAFAAsABAAAAAAAAAAFAAwABAAAAAAAAAAFAA0ABAAAAAAAAAAFAA4ABAAAAAAAAAAFAA8ABAAAAAAAAAAGAP//BAAAAAAAAAAGAAAABAAAAAAAAAAGAAEABAAAAAAAAAAGAAIABAAAAAAAAAAGAAMABAAAAAAAAAAGAAQABAAAAAAAAAAGAAUABAAAAAAAAAAGAAYABAAAAAAAAAAGAAcABAAAAAAAAAAGAAgABAAAAAAAAAAGAAkABAAAAAAAAAAGAAoABAAAAAAAAAAGAAsABAAAAAAAAAAGAAwABAAAAAAAAAAGAA0ABAAAAAAAAAAGAA4ABAAAAAAAAAAGAA8ABAAAAAAAAAAHAP//BAAAAAAAAAAHAAAABAAAAAAAAAAHAAEABAAAAAAAAAAHAAIABAAAAAAAAAAHAAMABAAAAAAAAAAHAAQABAAAAAAAAAAHAAUABAAAAAAAAAAHAAYABAAAAAAAAAAHAAcABAAAAAAAAAAHAAgABAAAAAAAAAAHAAkABAAAAAAAAAAHAAoABAAAAAAAAAAHAAsABAAAAAAAAAAHAAwABAAAAAAAAAAHAA0ABAAAAAAAAAAHAA4ABAAAAAAAAAAHAA8ABAAAAAAAAAAIAP//BAAAAAAAAAAIAAAABAAAAAAAAAAIAAEABAAAAAAAAAAIAAIABAAAAAAAAAAIAAMABAAAAAAAAAAIAAQABAAAAAAAAAAIAAUABAAAAAAAAAAIAAYABAAAAAAAAAAIAAcABAAAAAAAAAAIAAgABAAAAAAAAAAIAAkABAAAAAAAAAAIAAoABAAAAAAAAAAIAAsABAAAAAAAAAAIAAwABAAAAAAAAAAIAA0ABAAAAAAAAAAIAA4ABAAAAAAAAAAIAA8ABAAAAAAAAAAJAP//BAAAAAAAAAAJAAAABAAAAAAAAAAJAAEABAAAAAAAAAAJAAIABAAAAAAAAAAJAAMABAAAAAAAAAAJAAQABAAAAAAAAAAJAAUABAAAAAAAAAAJAAYABAAAAAAAAAAJAAcABAAAAAAAAAAJAAgABAAAAAAAAAAJAAkABAAAAAAAAAAJAAoABAAAAAAAAAAJAAsABAAAAAAAAAAJAAwABAAAAAAAAAAJAA0ABAAAAAAAAAAJAA4ABAAAAAAAAAAJAA8ABAAAAAAAAAAKAP//BAAAAAAAAAAKAAAABAAAAAAAAAAKAAEABAAAAAAAAAAKAAIABAAAAAAAAAAKAAMABAAAAAAAAAAKAAQABAAAAAAAAAAKAAUABAAAAAAAAAAKAAYABAAAAAAAAAAKAAcABAAAAAAAAAAKAAgABAAAAAAAAAAKAAkABAAAAAAAAAAKAAoABAAAAAAAAAAKAAsABAAAAAAAAAAKAAwABAAAAAAAAAAKAA0ABAAAAAAAAAAKAA4ABAAAAAAAAAAKAA8ABAAAAAAAAAALAP//BAAAAAAAAAALAAAABAAAAAAAAAALAAEABAAAAAAAAAALAAIABAAAAAAAAAALAAMABAAAAAAAAAALAAQABAAAAAAAAAALAAUABAAAAAAAAAALAAYABAAAAAAAAAALAAcABAAAAAAAAAALAAgABAAAAAAAAAALAAkABAAAAAAAAAALAAoABAAAAAAAAAALAAsABAAAAAAAAAALAAwABAAAAAAAAAALAA0ABAAAAAAAAAALAA4ABAAAAAAAAAALAA8ABAAAAAAAAAAMAP//BAAAAAAAAAAMAAAABAAAAAAAAAAMAAEABAAAAAAAAAAMAAIABAAAAAAAAAAMAAMABAAAAAAAAAAMAAQABAAAAAAAAAAMAAUABAAAAAAAAAAMAAYABAAAAAAAAAAMAAcABAAAAAAAAAAMAAgABAAAAAAAAAAMAAkABAAAAAAAAAAMAAoABAAAAAAAAAAMAAsABAAAAAAAAAAMAAwABAAAAAAAAAAMAA0ABAAAAAAAAAAMAA4ABAAAAAAAAAAMAA8ABAAAAAAAAAANAP//BAAAAAAAAAANAAAABAAAAAAAAAANAAEABAAAAAAAAAANAAIABAAAAAAAAAANAAMABAAAAAAAAAANAAQABAAAAAAAAAANAAUABAAAAAAAAAANAAYABAAAAAAAAAANAAcABAAAAAAAAAANAAgABAAAAAAAAAANAAkABAAAAAAAAAANAAoABAAAAAAAAAANAAsABAAAAAAAAAANAAwABAAAAAAAAAANAA0ABAAAAAAAAAANAA4ABAAAAAAAAAANAA8ABAAAAAAAAAAOAP//BAAAAAAAAAAOAAAABAAAAAAAAAAOAAEABAAAAAAAAAAOAAIABAAAAAAAAAAOAAMABAAAAAAAAAAOAAQABAAAAAAAAAAOAAUABAAAAAAAAAAOAAYABAAAAAAAAAAOAAcABAAAAAAAAAAOAAgABAAAAAAAAAAOAAkABAAAAAAAAAAOAAoABAAAAAAAAAAOAAsABAAAAAAAAAAOAAwABAAAAAAAAAAOAA0ABAAAAAAAAAAOAA4ABAAAAAAAAAAOAA8ABAAAAAAAAAAPAP//BAAAAAAAAAAPAAAABAAAAAAAAAAPAAEABAAAAAAAAAAPAAIABAAAAAAAAAAPAAMABAAAAAAAAAAPAAQABAAAAAAAAAAPAAUABAAAAAAAAAAPAAYABAAAAAAAAAAPAAcABAAAAAAAAAAPAAgABAAAAAAAAAAPAAkABAAAAAAAAAAPAAoABAAAAAAAAAAPAAsABAAAAAAAAAAPAAwABAAAAAAAAAAPAA0ABAAAAAAAAAAPAA4ABAAAAAAAAAAPAA8ABAAAAAAAAAAQAP//BAAAAAAAAAAQAAAABAAAAAAAAAAQAAEABAAAAAAAAAAQAAIABAAAAAAAAAAQAAMABAAAAAAAAAAQAAQABAAAAAAAAAAQAAUABAAAAAAAAAAQAAYABAAAAAAAAAAQAAcABAAAAAAAAAAQAAgABAAAAAAAAAAQAAkABAAAAAAAAAAQAAoABAAAAAAAAAAQAAsABAAAAAAAAAAQAAwABAAAAAAAAAAQAA0ABAAAAAAAAAAQAA4ABAAAAAAAAAAQAA8ABAAAAAAAAAARAP//BAAAAAAAAAARAAAABAAAAAAAAAARAAEABAAAAAAAAAARAAIABAAAAAAAAAARAAMABAAAAAAAAAARAAQABAAAAAAAAAARAAUABAAAAAAAAAARAAYABAAAAAAAAAARAAcABAAAAAAAAAARAAgABAAAAAAAAAARAAkABAAAAAAAAAARAAoABAAAAAAAAAARAAsABAAAAAAAAAARAAwABAAAAAAAAAARAA0ABAAAAAAAAAARAA4ABAAAAAAAAAARAA8ABAAAAAAAAAASAP//BAAAAAAAAAASAAAABAAAAAAAAAASAAEABAAAAAAAAAASAAIABAAAAAAAAAASAAMABAAAAAAAAAASAAQABAAAAAAAAAASAAUABAAAAAAAAAASAAYABAAAAAAAAAASAAcABAAAAAAAAAASAAgABAAAAAAAAAASAAkABAAAAAAAAAASAAoABAAAAAAAAAASAAsABAAAAAAAAAASAAwABAAAAAAAAAASAA0ABAAAAAAAAAASAA4ABAAAAAAAAAASAA8ABAAAAAAAAAATAP//BAAAAAAAAAATAAAABAAAAAAAAAATAAEABAAAAAAAAAATAAIABAAAAAAAAAATAAMABAAAAAAAAAATAAQABAAAAAAAAAATAAUABAAAAAAAAAATAAYABAAAAAAAAAATAAcABAAAAAAAAAATAAgABAAAAAAAAAATAAkABAAAAAAAAAATAAoABAAAAAAAAAATAAsABAAAAAAAAAATAAwABAAAAAAAAAATAA0ABAAAAAAAAAATAA4ABAAAAAAAAAATAA8ABAAAAAAAAAAUAP//BAAAAAAAAAAUAAAABAAAAAAAAAAUAAEABAAAAAAAAAAUAAIABAAAAAAAAAAUAAMABAAAAAAAAAAUAAQABAAAAAAAAAAUAAUABAAAAAAAAAAUAAYABAAAAAAAAAAUAAcABAAAAAAAAAAUAAgABAAAAAAAAAAUAAkABAAAAAAAAAAUAAoABAAAAAAAAAAUAAsABAAAAAAAAAAUAAwABAAAAAAAAAAUAA0ABAAAAAAAAAAUAA4ABAAAAAAAAAAUAA8ABAAAAAAAAAAVAP//BAAAAAAAAAAVAAAABAAAAAAAAAAVAAEABAAAAAAAAAAVAAIABAAAAAAAAAAVAAMABAAAAAAAAAAVAAQABAAAAAAAAAAVAAUABAAAAAAAAAAVAAYABAAAAAAAAAAVAAcABAAAAAAAAAAVAAgABAAAAAAAAAAVAAkABAAAAAAAAAAVAAoABAAAAAAAAAAVAAsABAAAAAAAAAAVAAwABAAAAAAAAAAVAA0ABAAAAAAAAAAVAA4ABAAAAAAAAAAVAA8ABAAAAAAAAAA=")
tile_set = ExtResource("2_2sx05")

[node name="WallsTileMapLayer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAD/////AgAAAAAAAAAAAP//AgAAAAAAAAD//wAAAgAAAAAAAAD//wMAAgAAAAAAAAD//wUAAgAAAAAAAAD//wYAAgAAAAAAAAD//wcAAgAAAAAAAAD//wgAAgAAAAAAAAD//woAAgAAAAAAAAD//wsAAgAAAAAAAAD//wwAAgAAAAAAAAD//w0AAgAAAAAAAAD//w4AAgAAAAAAAAD//w8AAgAAAAAAAAAAAA8AAgAAAAAAAAABAA8AAgAAAAAAAAACAA8AAgAAAAAAAAAEAA8AAgAAAAAAAAAFAA8AAgAAAAAAAAAGAA8AAgAAAAAAAAAHAA8AAgAAAAAAAAAIAA8AAgAAAAAAAAAJAA8AAgAAAAAAAAAKAA8AAgAAAAAAAAALAA8AAgAAAAAAAAAMAA8AAgAAAAAAAAANAA8AAgAAAAAAAAAOAA8AAgAAAAAAAAAPAA8AAgAAAAAAAAAQAA8AAgAAAAAAAAASAA8AAgAAAAAAAAAUAA8AAgAAAAAAAAAVAA8AAgAAAAAAAAAAAA4AAgAAAAAAAAD//wIAAgAAAAAAAAD//wQAAgAAAAAAAAATAA8AAgAAAAAAAAADAA8AAgAAAAAAAAARAA8AAgAAAAAAAAABAP//AgAAAAAAAAABAA4AAgAAAAAAAAACAP//AgAAAAAAAAACAA4AAgAAAAAAAAADAA4AAgAAAAAAAAAEAA4AAgAAAAAAAAAFAA4AAgAAAAAAAAAGAA4AAgAAAAAAAAAHAA4AAgAAAAAAAAAIAA4AAgAAAAAAAAAJAP//AgAAAAAAAAAJAA4AAgAAAAAAAAAKAP//AgAAAAAAAAAKAA4AAgAAAAAAAAALAP//AgAAAAAAAAALAA4AAgAAAAAAAAAMAP//AgAAAAAAAAAMAA4AAgAAAAAAAAANAP//AgAAAAAAAAANAA4AAgAAAAAAAAAOAP//AgAAAAAAAAAOAA4AAgAAAAAAAAAPAP//AgAAAAAAAAAPAA4AAgAAAAAAAAAQAP//AgAAAAAAAAAQAA4AAgAAAAAAAAARAP//AgAAAAAAAAARAA4AAgAAAAAAAAASAP//AgAAAAAAAAASAA4AAgAAAAAAAAATAP//AgAAAAAAAAATAA4AAgAAAAAAAAAUAP//AgAAAAAAAAAUAA4AAgAAAAAAAAAVAP//AgAAAAAAAAAVAAAAAgAAAAAAAAAVAAMAAgAAAAAAAAAVAAQAAgAAAAAAAAAVAAUAAgAAAAAAAAAVAAYAAgAAAAAAAAAVAAkAAgAAAAAAAAAVAAoAAgAAAAAAAAAVAAsAAgAAAAAAAAAVAA4AAgAAAAAAAAAVAAEAAgAAAAAAAAAVAAIAAgAAAAAAAAAVAAwAAgAAAAAAAAAVAA0AAgAAAAAAAAAFAP//AgAAAAAAAAAGAP//AgAAAAAAAAAVAAcAAgAAAAAAAAAVAAgAAgAAAAAAAAAAAA0AAgAAAAAAAAABAA0AAgAAAAAAAAACAA0AAgAAAAAAAAADAA0AAgAAAAAAAAAEAA0AAgAAAAAAAAAFAA0AAgAAAAAAAAAGAA0AAgAAAAAAAAAHAA0AAgAAAAAAAAAIAA0AAgAAAAAAAAAJAA0AAgAAAAAAAAAKAA0AAgAAAAAAAAALAA0AAgAAAAAAAAAMAA0AAgAAAAAAAAANAA0AAgAAAAAAAAAOAA0AAgAAAAAAAAAPAA0AAgAAAAAAAAAQAA0AAgAAAAAAAAARAA0AAgAAAAAAAAASAA0AAgAAAAAAAAATAA0AAgAAAAAAAAAUAA0AAgAAAAAAAAADAP//AgAAAAAAAAAEAP//AgAAAAAAAAAHAP//AgAAAAAAAAAIAP//AgAAAAAAAAAAAAIAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAAQAAgAAAAAAAAAAAAUAAgAAAAAAAAAAAAYAAgAAAAAAAAAAAAcAAgAAAAAAAAAAAAgAAgAAAAAAAAAAAAoAAgAAAAAAAAAAAAsAAgAAAAAAAAAAAAwAAgAAAAAAAAABAAoAAgAAAAAAAAABAAsAAgAAAAAAAAABAAwAAgAAAAAAAAACAAoAAgAAAAAAAAACAAsAAgAAAAAAAAACAAwAAgAAAAAAAAADAAoAAgAAAAAAAAADAAsAAgAAAAAAAAADAAwAAgAAAAAAAAAEAAoAAgAAAAAAAAAEAAsAAgAAAAAAAAAEAAwAAgAAAAAAAAAFAAoAAgAAAAAAAAAFAAsAAgAAAAAAAAAFAAwAAgAAAAAAAAAGAAoAAgAAAAAAAAAGAAsAAgAAAAAAAAAGAAwAAgAAAAAAAAAHAAoAAgAAAAAAAAAHAAsAAgAAAAAAAAAHAAwAAgAAAAAAAAAIAAoAAgAAAAAAAAAIAAsAAgAAAAAAAAAIAAwAAgAAAAAAAAAJAAoAAgAAAAAAAAAJAAsAAgAAAAAAAAAJAAwAAgAAAAAAAAAKAAoAAgAAAAAAAAAKAAsAAgAAAAAAAAAKAAwAAgAAAAAAAAALAAoAAgAAAAAAAAALAAsAAgAAAAAAAAALAAwAAgAAAAAAAAAMAAoAAgAAAAAAAAAMAAsAAgAAAAAAAAAMAAwAAgAAAAAAAAANAAoAAgAAAAAAAAANAAsAAgAAAAAAAAANAAwAAgAAAAAAAAAOAAoAAgAAAAAAAAAOAAsAAgAAAAAAAAAOAAwAAgAAAAAAAAAPAAoAAgAAAAAAAAAPAAsAAgAAAAAAAAAPAAwAAgAAAAAAAAAQAAoAAgAAAAAAAAAQAAsAAgAAAAAAAAAQAAwAAgAAAAAAAAARAAoAAgAAAAAAAAARAAsAAgAAAAAAAAARAAwAAgAAAAAAAAASAAoAAgAAAAAAAAASAAsAAgAAAAAAAAASAAwAAgAAAAAAAAATAAoAAgAAAAAAAAATAAsAAgAAAAAAAAATAAwAAgAAAAAAAAAUAAoAAgAAAAAAAAAUAAsAAgAAAAAAAAAUAAwAAgAAAAAAAAATAAAAAgAAAAAAAAATAAEAAgAAAAAAAAATAAIAAgAAAAAAAAATAAMAAgAAAAAAAAATAAQAAgAAAAAAAAATAAUAAgAAAAAAAAATAAYAAgAAAAAAAAATAAcAAgAAAAAAAAAUAAAAAgAAAAAAAAAUAAEAAgAAAAAAAAAUAAIAAgAAAAAAAAAUAAMAAgAAAAAAAAAUAAQAAgAAAAAAAAAUAAUAAgAAAAAAAAAUAAYAAgAAAAAAAAAUAAcAAgAAAAAAAAAUAAgAAgAAAAAAAAACAAMAAgAAAAAAAAADAAgAAgAAAAAAAAAFAAYAAgAAAAAAAAAJAAEABAAAAAAAAAAJAAIAAgAAAAAAAAAJAAMAAgAAAAAAAAAJAAQAAgAAAAAAAAAJAAUAAgAAAAAAAAAJAAYAAgAAAAAAAAAJAAcAAgAAAAAAAAANAAIAAgAAAAAAAAANAAMAAgAAAAAAAAANAAQAAgAAAAAAAAANAAUAAgAAAAAAAAANAAYAAgAAAAAAAAANAAcAAgAAAAAAAAAOAAgAAgAAAAAAAAARAAQAAgAAAAAAAAARAAUAAgAAAAAAAAACAAQAAgAAAAAAAAACAAgAAgAAAAAAAAADAAIAAgAAAAAAAAADAAUAAgAAAAAAAAAEAAIAAgAAAAAAAAAEAAUAAgAAAAAAAAAEAAgAAgAAAAAAAAAFAAIAAgAAAAAAAAAFAAcAAgAAAAAAAAAHAAIAAgAAAAAAAAAIAAIAAgAAAAAAAAAJAAgAAgAAAAAAAAAKAAIAAgAAAAAAAAALAAIAAgAAAAAAAAANAAgAAgAAAAAAAAAOAAIAAgAAAAAAAAAPAAIAAgAAAAAAAAAPAAgAAgAAAAAAAAAQAAMAAgAAAAAAAAAQAAcAAgAAAAAAAAARAAYAAgAAAAAAAAATAAgAAgAAAAAAAAAAAAAAAgAAAAAAAAABAAAAAgAAAAAAAAACAAAAAgAAAAAAAAADAAAAAgAAAAAAAAAEAAAAAgAAAAAAAAAFAAAAAgAAAAAAAAAGAAAAAgAAAAAAAAAHAAAAAgAAAAAAAAAIAAAAAgAAAAAAAAAJAAAAAgAAAAAAAAAKAAAAAgAAAAAAAAALAAAAAgAAAAAAAAAMAAAAAgAAAAAAAAANAAAAAgAAAAAAAAAOAAAAAgAAAAAAAAAPAAAAAgAAAAAAAAAQAAAAAgAAAAAAAAARAAAAAgAAAAAAAAASAAAAAgAAAAAAAAAOAAkABAAAAAAAAAADAAkABAAAAAAAAAD//wEAAgAAAAAAAAAAAAEAAgAAAAAAAAAGAAQABAAAAAAAAAAFAAQABAAAAAAAAAALAAQABAAAAAAAAAAMAAQABAAAAAAAAAAHAAQABAAAAAAAAAA=")
tile_set = ExtResource("2_2sx05")

[node name="Paths" type="Node2D" parent="."]

[node name="StartGroup1" type="Sprite2D" parent="Paths"]
unique_name_in_owner = true
modulate = Color(0, 0, 1, 1)
position = Vector2(-25, 475)
texture = SubResource("PlaceholderTexture2D_0gmvk")

[node name="StartStrobeSquare" parent="Paths" instance=ExtResource("3_6nm7h")]
position = Vector2(25, 475)

[node name="EndGroup1" type="Sprite2D" parent="Paths"]
unique_name_in_owner = true
modulate = Color(1, 0, 0, 1)
position = Vector2(1025, 475)
texture = SubResource("PlaceholderTexture2D_0gmvk")

[node name="KillZone" type="Area2D" parent="Paths/EndGroup1"]
position = Vector2(0, -12.5)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paths/EndGroup1/KillZone"]
shape = SubResource("RectangleShape2D_yyeby")

[node name="EndStrobeSquare3" parent="Paths" instance=ExtResource("3_6nm7h")]
position = Vector2(975, 475)
default_animation_name = "red_grow"

[node name="DecorationsTileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAUAAkAAQAAAAAAAAA=")
tile_set = ExtResource("2_2sx05")
